# Rust-Authentication-Server

./: Cargo.toml
src/: auth.rs  error.rs  main.rs
