[package]
name = "rust-war-jwt-build-through"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "9"
tokio = {version = "1.0", features = ["full"]}
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
chrono = "0.4"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = "abort"